# knowledge-assesment-tool

./: README.md  pyproject.toml  run.py
kat/: __init__.py
kat/cli/: cli_args.py
kat/executor/: __init__.py
